--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,14 +2,25 @@
     "cSpell.words": [
         "Bethel",
         "blurred",
+        "cedula",
         "centered",
+        "Confirmed",
         "contrasena",
         "Contrasena",
+        "descripcion",
+        "despues",
+        "Envia",
+        "Fact",
         "facturacion",
         "hasheada",
         "icons",
+        "logeado",
         "milisegundos",
+        "navegacion",
+        "navigated",
         "resave",
+        "responsive",
+        "Sesion",
         "Swal",
         "sweetalert",
         "Uninitialized",
